--- a/PersonalShop/app/src/main/res/values/strings.xml
+++ b/PersonalShop/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Personal Shop</string>
+    <string name="search_hint">Buscar</string>
+    <string name="search_label">Buscar</string>
 </resources>
