style: add loaders for images

--- a/PersonalShop/app/src/main/res/values/strings.xml
+++ b/PersonalShop/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="action_search" translatable="false">Buscar</string>
 
     <string name="price_format" translatable="false">$ %s</string>
+    <string name="result_title" translatable="false">Resultados para %s</string>
 </resources>
