--- a/PersonalShop/app/src/main/res/values/strings.xml
+++ b/PersonalShop/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
 
     <string name="price_format" translatable="false">$ %s</string>
     <string name="result_title" translatable="false">Resultados para %s</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
